--- a/strava-worker/.env
+++ b/strava-worker/.env
@@ -1,3 +1,4 @@
 #!/bin/bash
 export STRAVA_CLIENT_ID=34138249
 export STRAVA_CLIENT_SECRET=d123c876d1f5e39dac33f6faaabc77ba43364172
+export STRAVA_ACCESS_TOKEN=275eb16121500b205ba698c4d77d9bcd4c1cf6e7
