--- a/strava-worker/package.json
+++ b/strava-worker/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "strava-v3": "^1.14.0"
   }
 }
