WIP: adding chainlink

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ron Gierlach <rongierlach@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "chainlink": "github:smartcontractkit/chainlink",
     "ganache-cli": "^6.3.0",
     "openzeppelin-solidity": "^2.1.2",
     "truffle": "^5.0.4"
