--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chainlink": "github:smartcontractkit/chainlink",
     "ganache-cli": "^6.3.0",
+    "moment": "^2.24.0",
     "truffle": "^5.0.4",
     "truffle-flattener": "^1.3.0"
   }
