--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
     "react-scripts": "2.1.5",
     "rebass": "^3.0.1",
     "redux": "^4.0.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "web3": "^1.0.0-beta.46"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "source .env && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
