--- a/strava-worker/package.json
+++ b/strava-worker/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "int64-buffer": "^0.99.1007",
     "strava-v3": "^1.14.0"
   }
 }
